--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,34 @@
-main {
-    max-width : 840px;
+nav {
+    background-color: steelblue;
+    padding: 10px;
 }
 
-
-header {
-    background-color: rgb(74, 182, 236);
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    font-size: 27px;
-    box-shadow: 0 0 25px 0 black;
+nav a {
+    color: white;
+    padding: 10px;
+    display: block;
 }
 
-header * {
-    display: inline;
+h1 {
+    color: steelblue;
 }
 
-header li {
-    margin: 20px;
+main img {
+    width: 150px;
+    height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
 }
 
-header li a {
-    color: black;
-    text-decoration: none;
+p {
+    padding: 0;
 }
 
 aside {
+    width: 20em;
     margin: 1em;
-    border: 1px solid rgba(0, 0, 0, 0.2); /* 1️⃣ */
+    border: 1px solid rgba(0, 0, 0, 0.2); /* why use rgba instead of hex here? */
     padding: 1em;
     background-color: #eee;
     color: #333;
@@ -44,11 +41,9 @@ aside img {
 }
 
 main img {
-    width: 150px;
+    width: 200px;
     height: auto;
 }
-
-p {padding: 0;}
 
 footer {
     margin-top: 1em;
