--- a/Styles/site-plan-rafting.css
+++ b/Styles/site-plan-rafting.css
@@ -1,4 +1,4 @@
- @import url('https://fonts.googleapis.com/css2?family=Mooli&family=Open+Sans:ital@0;1&family=Roboto:ital,wght@1,300;1,400&display=swap');
+ @import url{'https://fonts.googleapis.com/css2?family=Mooli&family=Open+Sans:ital@0;1&family=Roboto:ital,wght@1,300;1,400&display=swap'};
 
  :root {
     --primary--color:#A6243E;
@@ -60,7 +60,7 @@
     font-family: var(--paragraph-font);
     color: var(--paragraph-color);
     padding: 1em;
-    
+
   }
 
   .colors {
