--- a/Styles/site-plan-rafting.css
+++ b/Styles/site-plan-rafting.css
@@ -1,117 +1,131 @@
- @import url{'https://fonts.googleapis.com/css2?family=Mooli&family=Open+Sans:ital@0;1&family=Roboto:ital,wght@1,300;1,400&display=swap'};
+@import url('https://fonts.googleapis.com/css2?family=Mooli&family=Open+Sans:ital@0;1&family=Roboto:ital,wght@1,300;1,400&display=swap');
 
- :root {
-    --primary--color:#A6243E;
-    --secondary--color:#9E5454;
-    --accent1--color:#B09290;
-    --accent2--coor:#E3B1B1;
-      
-    --heading-font:Mooli;
-    --paragraph-font:Poppins;
-    
-    --headline-color-on-white: #A6243E;  
-  --headline-color-on-color: white;  
-  --paragraph-color-on-white: #A6243E; 
-  --paragraph-color-on-color: white; 
-  --paragraph-background-color:  #A6243E ;
-  --nav-link-color: white;
-  --nav-background-color:  #A6243E;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #9E5454 ;
- }
+:root {
+    --primary-color: #A6243E;
+    --secondary-color: #9E5454;
+    --accent1-color: #B09290;
+    --accent2-color: #E3B1B1;
 
- body {
- max-width: 960px;
-  margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
-  text-align: center;
- }
+    --heading-font: 'Mooli', sans-serif;
+    --paragraph-font: 'Poppins', sans-serif;
 
- img {
+    --headline-color-on-white: #A6243E;
+    --headline-color-on-color: white;
+    --paragraph-color-on-white: #A6243E;
+    --paragraph-color-on-color: white;
+    --paragraph-background-color: #A6243E;
+    --nav-link-color: white;
+    --nav-background-color: #A6243E;
+    --nav-hover-link-color: white;
+    --nav-hover-background-color: #9E5454;
+}
+
+body {
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 4em;
+    font-size: 18px;
+    text-align: center;
+}
+
+img {
     display: block;
     margin: 0 auto;
     max-width: 300px;
- }
+}
 
- h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--headline-color-on-white);
- }
+}
 
-  h2 {
+h2 {
     text-align: center;
-  }
-  
-  header {
+}
 
+header {
     padding: 1em;
     text-align: center;
     color: var(--paragraph-color-on-color);
     background-color: var(--paragraph-background-color);
+}
 
-  }
-
-  header > h1, header > h2 {
+header > h1, header > h2 {
     color: var(--headline-color-on-color);
-  }
-  p {
+}
 
+p {
     font-family: var(--paragraph-font);
-    color: var(--paragraph-color);
+    color: var(--paragraph-color-on-white); /* Cambiado a color-on-white */
     padding: 1em;
+}
 
-  }
-
-  .colors {
+.colors {
     width: 100%;
     min-width: 350px;
     margin: 30px auto;
     text-align: center;
-  }
-  .colors th {
+}
+
+.colors th {
     background-color: #999;
-  }
-  .colors td{
+}
+
+.colors td {
     width: 25%;
     height: 3em;
-  }
-  .primary {
+}
+
+.primary {
     background-color: var(--primary-color);
-  }
-  .secondary {
+}
+
+.secondary {
     background-color: var(--secondary-color);
-  }
-  .accent1 {
+}
+
+.accent1 {
     background-color: var(--accent1-color);
-  }
-  .accent2{
+}
+
+.accent2 {
     background-color: var(--accent2-color);
-  }
-  p.colored {
+}
+
+p.colored {
     background-color: var(--paragraph-background-color);
     color: var(--paragraph-color-on-color);
-  }
-  nav {
+}
+
+nav {
     background-color: var(--nav-background-color);
     line-height: 3em;
     text-align: center;
     font-size: 1.2em;
-  }
-  nav  {
-    list-style-type: none;
+}
+
+nav ul {
+    list-style-type: none; 
     display: flex;
-  }
-  nav a {
-    padding:1em;
-    min-width: 120px;
+    padding: 0; 
+}
+
+nav li {
+    flex-grow: 1; 
+}
+
+nav a {
     text-decoration: none;
-    padding: 10px;
-  }
-  nav a:link, nav a:visited {
+    padding: 1em;
+    min-width: 120px;
+    display: block; 
+}
+
+nav a:link, nav a:visited {
     color: var(--nav-link-color);
-  }
-  nav a:hover {
+}
+
+nav a:hover {
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
-  }
+}
