--- a/Styles/site-plan-rafting.css
+++ b/Styles/site-plan-rafting.css
@@ -6,8 +6,8 @@
     --accent1--color:#B09290;
     --accent2--coor:#E3B1B1;
       
-    --heading-font:Mooli;
-    --paragraph-font:Poppins;
+    --heading-font:'Mooli',serif;
+    --paragraph-font:'Poppins',serif;
     
     --headline-color-on-white: #A6243E;  
   --headline-color-on-color: white;  
@@ -21,89 +21,37 @@
  }
 
  body {
+  font-family:var(--paragraph-font);
  max-width: 960px;
-  margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
-  text-align: center;
- }
-
- img {
-    display: block;
-    margin: 0 auto;
-    max-width: 300px;
+  padding: 20px;
  }
 
  h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
-    color: var(--headline-color-on-white);
+    color: var(--primary--color);
   }
 
-  h2 {
-    text-align: center;
-  }
-  
   header {
-    padding: 1em;
-    text-align: center;
-    color: var(--paragraph-color-on-color);
-    background-color: var(--paragraph-background-color);
-  }
-
-  header > h1, header > h2 {
-    color: var(--headline-color-on-color);
-  }
-  p {
-    font-family: var(--paragraph-font);
-    color: var(--paragraph-color);
-    padding: 1em;
-  }
-
-  .colors {
-    width: 100%;
-    min-width: 350px;
-    margin: 30px auto;
-    text-align: center;
-  }
-  .colors th {
-    background-color: #999;
-  }
-  .colors td{
-    width: 25%;
-    height: 3em;
-  }
-  .primary {
-    background-color: var(--primary-color);
-  }
-  .secondary {
-    background-color: var(--secondary-color);
-  }
-  .accent1 {
+    padding: 20px;
     background-color: var(--accent1-color);
   }
-  .accent2{
-    background-color: var(--accent2-color);
+
+  p {
+    padding: 25px;
   }
-  p.colored {
-    background-color: var(--paragraph-background-color);
-    color: var(--paragraph-color-on-color);
-  }
+
   nav {
     background-color: var(--nav-background-color);
-    line-height: 3em;
-    text-align: center;
-    font-size: 1.2em;
-  }
-  nav  {
-    list-style-type: none;
+    font-size: 1.2rem;
     display: flex;
   }
+
   nav a {
-    padding:1em;
-    min-width: 120px;
+    display: block;
+    color: var(--nav-link-color);
     text-decoration: none;
-    padding: 10px;
   }
+  
   nav a:link, nav a:visited {
     color: var(--nav-link-color);
   }
