--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,21 +1,24 @@
  @import url('https://fonts.googleapis.com/css2?family=Mooli&family=Open+Sans:ital@0;1&family=Roboto:ital,wght@1,300;1,400&display=swap');
 
  :root {
-    --primary--color:#A6243E;
-    --secondary--color:#9E5454;
-    --accent1--color:#B09290;
-    --accent2--coor:#E3B1B1;
-      
-    --heading-font:'Mooli',serif;
-    --paragraph-font:'Poppins',serif;
+  --primary-color: #A6243E;
+  --secondary-color: #9E5454;
+  --accent1-color: #B09290;
+  --accent2-color: #E3B1B1;
     
-    
-  --nav-background-color:  #A6243E;
+  --heading-font: 'Mooli', serif;
+  --paragraph-font: 'Poppins', serif;
+  
+  --headline-color-on-white: #A6243E;  
+  --headline-color-on-color: white;  
+  --paragraph-color-on-white: #A6243E; 
+  --paragraph-color-on-color: white; 
+  --paragraph-background-color: #A6243E;
   --nav-link-color: white;
+  --nav-background-color: #A6243E;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #9E5454 ;
- }
-
+  --nav-hover-background-color: #9E5454;
+}
  body {
   max-width: 960px;
   margin: 0 auto;
