--- a/week1 html/styles/styles.css
+++ b/week1 html/styles/styles.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    font-size: 16px;
-    font-family: Roboto, Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
+    background-color: #f5f5f5;
 }
 
 nav {
@@ -26,7 +26,7 @@ h1 {
 }
 
 main {
-    max-width: 640px;
+    max-width: 900px;
 }
 
 main img {
@@ -55,6 +55,10 @@ aside img {
     height: auto;
 }
 
+li{
+    margin-bottom: 1rem;
+}
+
 aside h2 {
     position: absolute;
     top: 67px;
@@ -70,7 +74,7 @@ footer {
 /* Class Selector */
  .box {
     margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 1);
+    border: 1px solid rgba(0, 0, 0,0.1);
     padding: 1rem;
     background-color: #eee;
     color: #000;
