--- a/week1 html/styles/styles.css
+++ b/week1 html/styles/styles.css
@@ -5,20 +5,16 @@
 }
 
 body{
-
     font-size: 16px;
-    font-family: 'Roboto', Arial, sans-serif;
-  
+    font-family: Roboto, Arial, sans-serif;
 }
 
 nav {
-
     background-color: steelblue;
     padding: 10px;
 }
 
 nav a {
-
     color: white;
     padding: 10px;
     display: block;
@@ -75,7 +71,7 @@ footer {
     text-align: center;
 }
 
-/* Class Selector */
+ /*Class Selector*/
 
  .box {
     margin: 1rem;
