--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,68 +1,108 @@
-@import url('https://fonts.googleapis.com/css2?family=Mooli&family=Open+Sans:ital@0;1&family=Roboto:ital,wght@1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
+
 :root {
-    --primary-color: #25CED1;
+    --primary-color: #FCEADE;
     --secondary-color: #FCEADE;
-    --accent1-color:#EA526F;
+    --accent1-color: #EA526F;
     --accent2-color: #ff8a5b;
-
-    --heading-font: 'Rock Salt', serif;
-    --paragraph-font: 'Roboto', serif;
-
-    --nav-background-color: #25CED1;
-    --nav-link-color: #fff;
+    --heading-font: 'Rock Salt', cursive;
+    --paragraph-font: 'Roboto', sans-serif;
+    --nav-background-color:#FCEADE; ;
+    --nav-link-color:#A6243E ;
     --nav-hover-link-color: #FCEADE;
-    --nav-hover-background-color:#ff8a5b;
-    ;
+    --nav-hover-background-color: #ff8a5b;
 }
+
 
 body {
+    max-width: 950px;
+    margin: 0 auto;
+    padding: 2em;
+    font-size: 18px;
+    text-align: center;
     font-family: var(--paragraph-font);
-    padding: 20px;
+    color: var(--paragraph-color);
+    background-color: var(--secondary-color);
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: var(--heading-font);
-    color: var(--primary-color);
+header {
+    padding: 1em;
+    text-align: center;
+    color: var(--paragraph-color-on-color);
+    background-color: var(--nav-background-color);
 }
 
-.background-image {
-    width: 100%;
-    max-height: 600px;
+header img {
+    max-width: 200px;
 }
 
- .hero {
+nav {
+    margin-top: 1em;
+}
+
+nav a {
+    color: var(--nav-link-color);
+    text-decoration: none;
+    margin: 0 1em;
+}
+
+nav a:hover {
+    color: var(--nav-hover-link-color);
+}
+
+main {
+  position: relative;
+}
+
+
+.hero {
     position: relative;
+}
+
+.hero img {
     width: 100%;
     height: auto;
-  }
-    
-  .hero h1 {
+}
+
+.hero h1 {
     position: absolute;
     top: 2%;
+    left: 0;
+    right: 0%;
     background-color: rgba(0, 0, 0, 0.7);
-    width: 100%;
     font-family: var(--heading-font);
-    font-size: 36px;
+    font-size: 14px;
     color: var(--primary-color);
     text-align: center;
-    }
-  
-  .hero article {
-    position: absolute;
-    width: 80%;
-    top: 10%;
-    left: 8%;
-    background-color: var(--nav-background-color);
-    padding: 12px;
-    }
-  
-  .hero article p {
-    color: #fff;
-    font-family: var(--paragraph-font);
-    text-align: center;
-  }
-  
-  .hero article img {
+    padding: 1em;
     float: right;
-    height: 180px;
+}
+
+article {
+  position: absolute;
+  top: 42%;
+  left: 74%;
+  transform: translate(-14%, -44%);
+  background-color: var(--nav-background-color);
+  padding: 1em;
+  text-align: center;
+  opacity: 0.7;
+  font-size: 10px;
+  }
+
+
+  article img {
+    float: right;
+    height: 170px;
+}
+
+
+section {
+    margin-top: 2em;
+    text-align: center;
+}
+
+section h2 {
+    font-family: var(--heading-font);
+    color: var(--);
 }
