--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -60,7 +60,7 @@ main {
 }
 
 .hero img {
-    
+    width: 100%;
     height: auto;
 }
 
@@ -93,7 +93,6 @@ article {
 
  .hero article img {
     float: right;
-    height: 200px;
     padding-left: 28px;
 }
 
