--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,24 +9,40 @@ body{
     font-family: Roboto, Arial, sans-serif;
 }
 
+header, .grid, footer{
+ max-width: 840px;
+ margin: 0 auto;
+}
+
 nav {
+    display: flex;
+    align-items: center;
     background-color: steelblue;
-    padding: 10px;
+    padding: 1rem;
 }
 
 nav a {
+    flex: 1 1 auto;
     color: white;
-    padding: 10px;
+    padding: 1rem;
     display: block;
+    text-decoration: none;
+    text-align: center;
+}
+
+nav a:hover {
+    background-color: #333;
 }
 
 h1 {
     color: steelblue;
-    padding: 5rem;
+    padding: 1rem;
 }
 
 main {
-    max-width: 640px;
+    max-width: 900px;
+    grid-column: 2/3;
+    margin: 1rem;
 }
 
 main img {
@@ -44,9 +60,10 @@ p {
 }
 
 aside {
-    width: 20em;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 
@@ -66,12 +83,24 @@ aside h2 {
 }
 
 footer {
-    margin-top: 1em;
-    border-top: 1px solid #000;
-    text-align: center;
+    margin: 10px auto;
+    border-top: 1px solid rgba(0, 0, 0,.1);
+    padding: 10px;
+    background-color: #bbb;
+}
+
+footer p{
+     text-align: center;
+     font-size: 0.8rem;
+     color: rgba(0, 0, 0,.1);
 }
 
  /* Class Selectors */
+.grid{
+display: grid;
+grid-template-columns: 1fr 3fr;
+grid-gap: 1rem;
+}
  .box {
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0,.1);
@@ -81,7 +110,7 @@ footer {
  }
 
   .indent {
-    margin-left: 2rem;
+    padding-left: 2rem;
   }
 
  
