--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,411 +1,109 @@
-@import url('https://fonts.googleapis.com/css2?family=Tajawal&family=Underdog&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Underdog&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Tajawal&family=Underdog&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
 
-/* COMMENT! */
- /* * {
-    border: solid greenyellow 1px
- } */ 
- 
+:root {
+    --primary-color: #FCEADE;
+    --secondary-color: #FCEADE;
+    --accent1-color: #EA526F;
+    --accent2-color: #ff8a5b;
+    --heading-font: 'Rock Salt', cursive;
+    --paragraph-font: 'Roboto', sans-serif;
+    --nav-background-color:#FCEADE; ;
+    --nav-link-color:#A6243E ;
+    --nav-hover-link-color: #FCEADE;
+    --nav-hover-background-color: #ff8a5b;
+}
+
+
 body {
-    background-color: white;
-    font-size: 22px;
-    font-family: Tajawal, Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-#content {
-    max-width: 1600px;
+    max-width: 950px;
     margin: 0 auto;
-    font-family: Tajawal, Arial, Helvetica, sans-serif;
+    padding: 2em;
+    font-size: 18px;
+    text-align: center;
+    font-family: var(--paragraph-font);
+    color: var(--paragraph-color);
+    background-color: var(--secondary-color);
 }
-h4 {
-    color: #114b5f;
-}
-h2 {
-    margin: 0;
-}
-nav {
-    display: flex;
-    justify-content: space-around;
-}
-nav a {
-    text-align: center; 
-    color: #114b5f;
-    text-decoration: none;
-    padding: 35px;
-}
-nav a:hover {
-    background-color: #95dce5;
-    color: #eb9d6d;
-}
-#background {
-    height: 725px;
-    background-color: #95dce5;
-    grid-column: 1/11;
-    grid-row: 4/9;
-}
-#hero {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -100px;
-}
-#hero-msg {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    margin-top: 100px;
-    text-shadow: 0px 0px 10px #ffffff;
-}
-#hero-msg h1 {
-    text-align: center; 
-}
-#hero-msg h4 {
-    text-align: center; 
-    color: white;
 
+header {
+    padding: 1em;
+    text-align: center;
+    color: var(--paragraph-color-on-color);
+    background-color: var(--nav-background-color);
 }
-#hero-img {
+
+header img {
+    max-width: 200px;
+}
+
+nav {
+    margin-top: 1em;
+}
+
+nav a {
+    color: var(--nav-link-color);
+    text-decoration: none;
+    margin: 0 1em;
+}
+
+nav a:hover {
+    color: var(--nav-hover-link-color);
+}
+
+main {
+  position: relative;
+}
+
+
+.hero {
+    position: relative;
+}
+
+.hero img {
     width: 100%;
+    height: auto;
 }
-#hero-box {
-    grid-column: 1/4;
-    grid-row: 1/3; 
-    z-index: -1;
+
+.hero h1 {
+    position: absolute;
+    top: 2%;
+    left: 0;
+    right: 0%;
+    background-color: rgba(0, 0, 0, 0.7);
+    font-family: var(--heading-font);
+    font-size: 14px;
+    color: var(--primary-color);
+    text-align: center;
+    padding: 1em;
+    float: right;
 }
-.button-box {
+
+article {
+  position: absolute;
+  top: 25%;
+  left: 10%;
+  right: 10%;
+  background-color: var(--nav-background-color);
+  padding: 1em;
+  text-align: center;
+  opacity: 0.7;
+  font-size: 10px;
+  }
+
+
+ .hero article img {
+    float: right;
+    width: 200px;
+    padding-left: 28px;
+}
+
+
+section {
+    margin-top: 2em;
     text-align: center;
 }
-main section {
-    text-align: center; 
-}
-main section img {
-    box-sizing: border-box;
-}
-header {
-    background-color: #eb9d6dee;
-    display: grid;
-    grid-template-columns: 150px auto;
-}
-footer {
-    background-color: #eb9d6d;
-    padding: 25px 50px;
-    margin-top: 200px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-footer h3 {
-    color: #114b5f;
-}
-footer a {
-    color: #114b5f;
-    text-decoration: none;
-}
-footer a:hover {
-    color: #eb9d6d;
-}
-footer p {
-    font-size: 1.2em;
-}
-footer p a:hover {
-    text-decoration: underline;
-}
-.book {
-    background-color: #95dce5;
-    color: #114b5f;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 15px 30px;
-    margin-top: 50px;
-    border-radius: 5px;
-}
-.book:hover {
-    background-color: #95dce5;
-    color: #eb9d6d;
-}
-.join {
-    background-color: #95dce5;
-    color: #114b5f;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 15px 30px;
-    margin-top: 50px;
-    border-radius: 5px;
-}
-.join:hover {
-    background-color: #95dce5;
-    color: #eb9d6d;
-}
-.msg {
-    background-color: #eb9d6d;
-    line-height: 1.5em;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
-    box-shadow: 5px 5px 10px #6f7364;
 
+section h2 {
+    font-family: var(--heading-font);
+    color: var(--);
 }
-.msg h2 {
-    color: #114b5f;
-    font-family: "Racing Sans One",Arial, Helvetica, sans-serif;
-}
-.msg p {
-    color: #114b5f;
-    font-size: .8em;
-    padding-bottom: 15px;
-}
-.home-title {
-    color: #114b5f;
-    font-family: "Racing Sans One",Arial, Helvetica, sans-serif;
-    font-size: 2em;
-    margin-top: 10px;
-}
-.home-grid {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-}
-.icon {
-    width: 80px;
-    padding-top: 10px;
-}
-.logo {
-    width: 80px;
-}
-#logo_link {
-    padding-top: 5px;
-    justify-self: center;
-    align-self: center;
-}
-footer .social img {
-    padding-top: 15px;
-}
-.rivers-card {
-    margin: 200px 0;
-    grid-column: 2/4;
-    grid-row: 2/3;
-}
-.camping-card {
-    margin: 200px 0;
-    grid-column: 5/7;
-    grid-row: 2/3;
-}
-.rapids-card {
-    margin: 200px 0;
-    grid-column: 8/10;
-    grid-row: 2/3;
-}
-.card-img {
-    border: 10px solid #028090;
-    transition: transform .5s;
-    box-shadow: 5px 5px 10px #6f7364;
-
-}
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1);
-}
-.mountains { /* I couldn't find this in the instructions, but it's the only way I could match the screen shot */
-    /*margin: 100px 0px; */
-    grid-column: 2/7;
-    grid-row: 5/8;
-
-    width: 100%;
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
-}
-.card-img, .mountains {
-    width: 100%;
-}
-
-/*Begin rivers subpage styles */
-.river-group {
-    position: relative;
-    top: -150px;
-    background-color: #02809000;
-   
-}
-
-.river-text-right {
-    display: grid;
-    grid-template-columns: 80px 320px auto;
-    grid-template-rows: 50px auto auto;
-
-    margin: 0px;
-    padding: 30px;
-}
-.river-text-right .title {
-    color: #114b5f;
-    background-color: #dddddd44;
-    font-size: 1.5em;
-    text-align: right;
-    padding: 10px;
-    grid-column: 2/4;
-    grid-row: 1/1;
-    z-index: 1;
-    text-shadow: #ffffff 1px 1px;
-    border-radius: 15px 15px 0px 0px;
-    font-family: "Racing Sans One",Arial, Helvetica, sans-serif;
-}
-.river-text-right .text {
-    background: linear-gradient(90deg, rgba(235,157,109,0.7) 0%, rgba(235,157,109,1) 35%, rgba(235,157,109,1) 100%);
-    text-shadow: #ffffff 1px 1px 0px;
-    color: #114b5f;
-    text-align: justify;
-    grid-column: 2/4;
-    grid-row: 2/3;
-    z-index: 1;
-    padding: 10px;
-    font-family: Tajawal, Arial, Helvetica, sans-serif;
-    font-size: .8em;
-    
-}
-.river-text-right .image {
-    grid-column: 1/3;
-    grid-row: 1/4;
-    z-index: 0;
-    
-}
-.river-text-right .image img {
-    width: 400px;
-    box-shadow: #114b5f 5px 5px 10px;
-
-}
-.river-text-left {
-    display: grid;
-    grid-template-columns: auto 320px 80px;
-    grid-template-rows: 50px auto auto;
-
-    margin: 0px;
-    padding: 30px;
-}
-.river-text-left .title {
-    color: #114b5f;
-    background-color: #dddddd44;
-    font-size: 1.5em;
-    padding: 10px;
-    grid-column: 1/3;
-    grid-row: 1/1;
-    z-index: 1;
-    text-shadow: #ffffff 1px 1px;
-    border-radius: 15px 15px 0px 0px;
-    font-family: "Racing Sans One",Arial, Helvetica, sans-serif;
-}
-.river-text-left .text {
-    background: linear-gradient(90deg, rgba(235,157,109,1) 0%, rgba(235,157,109,1) 35%, rgba(235,157,109,0.7) 100%);
-    text-shadow: #ffffff 1px 1px 0px;
-    color: #114b5f;
-    text-align: justify;
-    grid-column: 1/3;
-    grid-row: 2/3;
-    z-index: 1;
-    padding: 10px;
-    font-family: Tajawal, Arial, Helvetica, sans-serif;
-    font-size: .8em;
-}
-.river-text-left .image {
-    grid-column: 2/4;
-    grid-row: 1/4;
-    z-index: 0;
-    
-}
-.river-text-left .image img {
-    width: 400px;
-    box-shadow: #114b5f 5px 5px 10px;
-
-}
-/*End rivers subpage styles*/
-
-@media screen and (max-width: 900px) {
-    #hero, .home-grid {
-        display: block;
-        height: auto;
-    }
-    nav, footer {
-        flex-direction: column;
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-    }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: #6f7364;
-    }
-    .rivers-card, .camping-card, .rapids-card { 
-        margin: 50px auto;
-        width: 60%;
-    }
-    #background {
-        display: none;
-    }
-    .mountains, .msg {
-        width: 80%;
-        display: block;
-        margin: 0 auto;
-    }
-    footer {
-        margin-top: 25px;
-    }
-/* Rivers subpage small screen styles */
-    .river-text-left {
-        display: block;
-        text-align: center;
-
-        margin: 0px;
-        padding: 30px;
-    }
-    .river-text-right {
-        display: block;
-        text-align: center;
- 
-        margin: 0px;
-        padding: 30px;
-    }
-    .river-text-left .title {
-        text-align: center;
-    }
-    .river-text-right .title {
-        text-align: center;
-    }
-    .river-text-left .image {
-        position: relative;
-        top: -100px;
-    }
-    .river-text-right .image {
-        position: relative;
-        top: -100px;
-    }
-    .river-text-left .image img {
-       width: 75%;
-    }
-    .river-text-right .image img {
-        width: 75%;
-     }
-
-    .river-text-left .text {
-        position: relative;
-        background: linear-gradient(180deg, rgba(235,157,109,1) 0%, rgba(235,157,109,1) 35%, rgba(235,157,109,0.7) 100%);
-        
-    }
-    .river-text-right .text {
-        position: relative;
-        background: linear-gradient(180deg, rgba(235,157,109,1) 0%, rgba(235,157,109,1) 35%, rgba(235,157,109,0.7) 100%);
-        
-    }
-
-    .river-group {
-        top: 0px;
-    }
-    /*End rivers subpage smallscreen styles*/
-}
-          
