--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,109 +1,283 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Rock+Salt&display=swap');
-
-:root {
-    --primary-color: #FCEADE;
-    --secondary-color: #FCEADE;
-    --accent1-color: #EA526F;
-    --accent2-color: #ff8a5b;
-    --heading-font: 'Rock Salt', cursive;
-    --paragraph-font: 'Roboto', sans-serif;
-    --nav-background-color:#FCEADE; ;
-    --nav-link-color:#A6243E ;
-    --nav-hover-link-color: #FCEADE;
-    --nav-hover-background-color: #ff8a5b;
-}
+@import url('https://fonts.googleapis.com/css2?family=Tajawal&family=Underdog&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Underdog&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Tajawal&family=Underdog&display=swap');
 
 
 body {
-    max-width: 950px;
+    background-color: white;
+    font-size: 22px;
+    font-family: Tajawal, Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#content {
+    max-width: 1600px;
     margin: 0 auto;
-    padding: 2em;
-    font-size: 18px;
-    text-align: center;
-    font-family: var(--paragraph-font);
-    color: var(--paragraph-color);
-    background-color: var(--secondary-color);
+    font-family: Tajawal, Arial, Helvetica, sans-serif;
 }
 
-header {
-    padding: 1em;
-    text-align: center;
-    color: var(--paragraph-color-on-color);
-    background-color: var(--nav-background-color);
+h4 {
+    color: #114b5f;
 }
 
-header img {
-    max-width: 200px;
+h2 {
+    margin: 0;
 }
 
 nav {
-    margin-top: 1em;
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
-    color: var(--nav-link-color);
+    text-align: center;
+    color: #114b5f;
     text-decoration: none;
-    margin: 0 1em;
+    padding: 35px;
 }
 
 nav a:hover {
-    color: var(--nav-hover-link-color);
+    background-color: beige;
+    color: skyblue;
 }
 
-main {
-  position: relative;
+#background {
+    height: 725px;
+    background-color: beige;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
-
-.hero {
-    position: relative;
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
 }
 
-.hero img {
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    text-shadow: 0px 0px 10px #ffffff;
+}
+
+#hero-msg h1 {
+    text-align: center;
+}
+
+#hero-msg h4 {
+    text-align: center;
+    color: black;
+    font-size: 50px;
+}
+
+#hero-img {
     width: 100%;
-    height: auto;
 }
 
-.hero h1 {
-    position: absolute;
-    top: 2%;
-    left: 0;
-    right: 0%;
-    background-color: rgba(0, 0, 0, 0.7);
-    font-family: var(--heading-font);
-    font-size: 14px;
-    color: var(--primary-color);
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+.button-box {
     text-align: center;
-    padding: 1em;
-    float: right;
 }
 
-article {
-  position: absolute;
-  top: 25%;
-  left: 10%;
-  right: 10%;
-  background-color: var(--nav-background-color);
-  padding: 1em;
-  text-align: center;
-  opacity: 0.7;
-  font-size: 10px;
-  }
+main section {
+    text-align: center;
+}
 
+main section img {
+    box-sizing: border-box;
+}
 
- .hero article img {
-    float: right;
+header {
+    background-color: skyblue;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+footer {
+    background-color: skyblue;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer h3 {
+    color: #114b5f;
+}
+
+footer a {
+    color: #114b5f;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: beige;
+}
+
+footer p {
+    font-size: 1.2em;
+}
+
+footer p a:hover {
+    text-decoration: underline;
+}
+
+.book {
+    background-color: #95dce5;
+    color: #114b5f;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.book:hover {
+    background-color: bisque;
+    color: #eb9d6d;
+}
+
+.join {
+    background-color: beige;
+    color: #114b5f;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.join:hover {
+    background-color: beige;
+    color: #eb9d6d;
+}
+
+.msg {
+    background-color: skyblue;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.msg h2 {
+    color: #114b5f;
+    font-family: "Racing Sans One", Arial, Helvetica, sans-serif;
+}
+
+.msg p {
+    color: #114b5f;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+
+.home-title {
+    color: #114b5f;
+    font-family: "Racing Sans One", Arial, Helvetica, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+.logo {
     width: 200px;
-    padding-left: 28px;
+}
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+.rivers-card {
+    margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.card-img {
+    border: 10px solid beige;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.mountains { 
+    grid-column: 2/7;
+    grid-row: 5/8;
+
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.river-group {
+    position: relative;
+    top: -150px;
+    background-color: #02809000;
+}
+
+.river-text-right {
+    display: grid;
+    grid-template-columns: 80px 320px auto;
+    grid-template-rows: 50px auto auto;
+
+    margin: 0px;
+    padding: 30px;
+}
+
+.river-text-right .title {
+    color: #114b5f;
+    background-color: #dddddd44;
+    font-size: 1.5em;
+    text-align: right;
+    padding: 10px;
+    grid-column: 2/4;
+    grid-row: 1/1;
 }
 
 
-section {
-    margin-top: 2em;
-    text-align: center;
-}
 
-section h2 {
-    font-family: var(--heading-font);
-    color: var(--);
-}
