--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -279,5 +279,31 @@ footer .social img {
     grid-row: 1/1;
 }
 
+.happy-card {
+    margin: 200px 0;
+    grid-column: 1/4;
+    grid-row: 5/7;
+    position: relative;
+}
+
+.happy-card .card-img {
+    border: 10px solid beige;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+    width: 100%;
+}
 
 
+.rafting-card {
+    margin: 200px 0;
+    grid-column: 7/7;
+    grid-row: 3/6;
+    position: relative;
+}
+
+.rafting-card .card-img {
+    border: 10px solid beige;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+    width: 210%;
+}
