--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -332,6 +332,45 @@ figure figcaption {
     font-family: "Tajawal", Arial, Helvetica, sans-serif;
 }
 
+h2{
+    text-align: center;
+}
+
+form {
+    width: 500px;
+    margin: 0 auto;
+  }
+  
+  fieldset {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  legend {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+  input,
+  select,
+  textarea {
+    width: 100%;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+
+  textarea {
+    height: 100px;
+  }
+
+
 input[type="checkbox"] {
     width: 25px;
     height: 25px;
@@ -343,7 +382,7 @@ input[type="checkbox"] {
     align-items: center;
 }
 
-span.checkA{
+.checkA{
     padding-left: 5px;
 }
 
