--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -399,3 +399,89 @@ button{
 button:hover {
     background-color: darkgreen;
 }
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    margin: 20px;
+}
+
+.trip-description,
+.trip,
+.trip3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.trip-description img,
+.trip img,
+.trip3 img {
+    width: 100%;
+    border: 10px solid beige;
+    transition: transform .5s;
+}
+
+.trip-description img:hover,
+.trip img:hover,
+.trip3 img:hover {
+    opacity: 0.6;
+    transform: scale(1.1);
+}
+
+.trip-description h2,
+.trip h2,
+.trip3 h2 {
+    color: #114b5f;
+    font-size: 1.5em;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.trip-description p,
+.trip p,
+.trip3 p {
+    color: #114b5f;
+    text-align: center;
+}
+
+.trip-table {
+    text-align: center;
+    margin: 20px;
+}
+
+.trip-table h2 {
+    font-size: 24px;
+    color: #114b5f;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ccc;
+}
+
+table th,
+table td {
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+
+table th {
+    background-color: beige;
+    color: #114b5f;
+    font-weight: bold;
+}
+
+footer {
+    background-color: skyblue;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
